CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(testdrive Fortran) 
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
ADD_EXECUTABLE(testdrive ${CMAKE_SOURCE_DIR}/testdrive.f90)

SET(CPACK_GENERATOR DEB)
SET(CPACK_DEBIAN_PACKAGING_DEBUG ON)
SET(CPACK_DEB_PACKAGE_NAME testdrive)
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "John <john@doe.com>")
SET(CPACK_DEBIAN_PACKAGE_SECTION "science")
SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
SET(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS ON)
SET(CPACK_PACKAGING_INSTALL_PREFIX /opt/TestDrive)
SET(CPACK_STRIP_FILES true)
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/postinst")
INCLUDE(CPack)
INSTALL(TARGETS testdrive RUNTIME DESTINATION .)
